--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body {
   width: 100vw;
   height: 100vh;
   position: relative;
-  background-image: url('https://photo.459122.xyz/iimhomo/2025/04/29/0605223a8d75a3da84a098d9d87e2d8e.jpg
-');
+  background-image: url('https://photo.459122.xyz/iimhomo/2025/04/29/0605223a8d75a3da84a098d9d87e2d8e.jpg');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
